--- a/index.html
+++ b/index.html
@@ -2,103 +2,116 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>MM2 Coinflip Demo</title>
+<title>Bloxybet MM2</title>
 <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.7.6.0.min.js"></script>
 
 <style>
+*{box-sizing:border-box}
 body{margin:0;background:#020617;color:white;font-family:Arial}
-.hidden{display:none}
-
-#loginBg{
-  position:fixed;inset:0;
-  background:#020617;
-  display:flex;align-items:center;justify-content:center
-}
-.loginBox{
-  border:1px solid #1e293b;
-  padding:20px;border-radius:10px;width:260px
-}
-
-#top{
-  height:60px;border-bottom:1px solid #1e293b;
-  display:flex;justify-content:space-between;align-items:center;
-  padding:0 20px
-}
-button{
-  background:#2563eb;border:none;color:white;
-  padding:6px 10px;border-radius:6px;cursor:pointer
-}
-button.red{background:#dc2626}
-
+#top{height:60px;border-bottom:1px solid #1e293b;display:flex;justify-content:space-between;align-items:center;padding:0 20px}
 #container{display:flex;height:calc(100vh - 60px)}
-#chat{width:30%;border-right:1px solid #1e293b;display:flex;flex-direction:column}
+#chat{width:25%;border-right:1px solid #1e293b;display:flex;flex-direction:column}
 #messages{flex:1;overflow:auto;padding:10px}
 #chat input{padding:10px;border:none}
-#main{width:70%;padding:20px}
+#main{width:75%;padding:20px}
 .match{border:1px solid #1e293b;padding:10px;border-radius:8px;margin-bottom:10px}
+button{background:#2563eb;color:white;border:none;padding:6px 10px;border-radius:6px;cursor:pointer}
+button.red{background:#dc2626}
 
-.modalBg{
+.modal-bg{
   position:fixed;inset:0;
   background:rgba(0,0,0,.7);
-  display:none;align-items:center;justify-content:center
+  display:none;
+  align-items:center;
+  justify-content:center;
+  animation:fade .2s;
 }
 .modal{
-  background:#020617;border:1px solid #1e293b;
-  border-radius:10px;padding:20px;width:300px;
-  animation:scale .2s
+  background:#020617;
+  border:1px solid #1e293b;
+  border-radius:10px;
+  padding:20px;
+  width:340px;
+  animation:scale .2s;
 }
-@keyframes scale{from{transform:scale(.8);opacity:0}to{transform:scale(1);opacity:1}}
+@keyframes fade{from{opacity:0}to{opacity:1}}
+@keyframes scale{from{transform:scale(.8)}to{transform:scale(1)}}
+
+.item{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  border:1px solid #1e293b;
+  padding:6px;
+  border-radius:6px;
+  margin-bottom:6px;
+  cursor:pointer;
+}
+.item.selected{background:#1e293b}
 
 .coin{
-  width:140px;height:140px;border-radius:50%;
-  background:linear-gradient(145deg,#fde047,#eab308);
-  color:black;font-size:48px;
-  display:flex;align-items:center;justify-content:center;
-  margin:auto;animation:flip 2.5s
+  width:120px;height:120px;
+  border-radius:50%;
+  background:#facc15;
+  color:black;
+  font-size:48px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  margin:auto;
+  animation:spin 2s;
 }
-@keyframes flip{
-  0%{transform:rotateY(0)}
-  50%{transform:rotateY(720deg) scale(1.2)}
-  100%{transform:rotateY(1080deg)}
-}
+@keyframes spin{from{transform:rotateY(0)}to{transform:rotateY(720deg)}}
 </style>
 </head>
 
 <body>
 
 <!-- LOGIN -->
-<div id="loginBg">
-  <div class="loginBox">
-    <h3>Login</h3>
-    <input id="loginName" placeholder="Username" style="width:100%;padding:8px">
+<div id="loginBg" class="modal-bg" style="display:flex">
+  <div class="modal">
+    <h2>Login</h2>
+    <input id="loginName" placeholder="Roblox username" style="width:100%;padding:8px">
     <br><br>
     <button onclick="login()">Login</button>
   </div>
 </div>
 
 <!-- WALLET -->
-<div id="walletBg" class="modalBg">
+<div id="walletBg" class="modal-bg">
   <div class="modal">
     <h3>Wallet</h3>
-    <div>
-      <img src="https://supremevalues.com/media/mm2godlies/Blossom.png" width="60">
-      <p>Blossom x<span id="itemCount"></span></p>
-      <p>Total Value: <b id="totalValue"></b></p>
-    </div>
+    <div id="walletItems"></div>
+    <p>Total Value: <b id="totalValue"></b></p>
     <button onclick="closeWallet()">Close</button>
   </div>
 </div>
 
-<div id="top" class="hidden">
+<!-- CREATE MATCH -->
+<div id="createBg" class="modal-bg">
+  <div class="modal">
+    <h3>Create Match</h3>
+    <div id="selectItems"></div>
+    <div style="display:flex;gap:10px;margin-top:10px">
+      <button onclick="side='H'">H</button>
+      <button onclick="side='T'">T</button>
+    </div>
+    <br>
+    <button onclick="confirmMatch()">Create</button>
+    <button class="red" onclick="closeCreate()">Cancel</button>
+  </div>
+</div>
+
+<div id="top">
   <div id="userLabel"></div>
   <div>
     <button onclick="openWallet()">Wallet</button>
-    <button onclick="createMatch()">Create Match</button>
+    <button onclick="openCreate()">Create Match</button>
     <button class="red" onclick="logout()">Logout</button>
   </div>
 </div>
 
-<div id="container" class="hidden">
+<div id="container">
   <div id="chat">
     <div id="messages"></div>
     <input id="chatInput" placeholder="Mesaj yaz...">
@@ -111,35 +124,36 @@ button.red{background:#dc2626}
 </div>
 
 <script>
-/* PUBNUB */
 const pubnub=new PubNub({
  publishKey:"pub-c-59b96e01-f4ca-486b-bde1-e3160adbc839",
  subscribeKey:"sub-c-3f46e9b1-23c3-4f38-8370-50666a4f1e57",
  uuid:"u"+Math.random()
 });
 
-/* STATE */
 let user=localStorage.getItem("user");
 let wallet=JSON.parse(localStorage.getItem("wallet")||"null");
-let matches={};
+let matches={},selected=[],side=null;
 
-/* LOGIN GATE */
+const BLOSSOM={
+ name:"Blossom",
+ value:910,
+ img:"https://supremevalues.com/media/mm2godlies/Blossom.png"
+};
+
 if(user){
  loginBg.style.display="none";
- top.classList.remove("hidden");
- container.classList.remove("hidden");
  userLabel.innerText=user;
- if(!wallet){
-  wallet={Blossom:20};
-  localStorage.setItem("wallet",JSON.stringify(wallet));
- }
+ if(!wallet){wallet={Blossom:20};saveWallet();}
+}else{
+ document.getElementById("top").style.display="none";
+ document.getElementById("container").style.display="none";
 }
 
-/* LOGIN / LOGOUT */
+function saveWallet(){localStorage.setItem("wallet",JSON.stringify(wallet));}
+
 function login(){
- const u=loginName.value.trim();
- if(!u) return;
- localStorage.setItem("user",u);
+ user=loginName.value;
+ localStorage.setItem("user",user);
  location.reload();
 }
 function logout(){
@@ -147,78 +161,83 @@ function logout(){
  location.reload();
 }
 
-/* WALLET */
 function openWallet(){
- itemCount.innerText=wallet.Blossom;
- totalValue.innerText=wallet.Blossom*910;
  walletBg.style.display="flex";
+ walletItems.innerHTML=`
+ <div class="item">
+   <img src="${BLOSSOM.img}" width="40">
+   Blossom x${wallet.Blossom} (${BLOSSOM.value})
+ </div>`;
+ totalValue.innerText=wallet.Blossom*BLOSSOM.value;
 }
 function closeWallet(){walletBg.style.display="none";}
 
-/* PUBNUB */
+function openCreate(){
+ selected=[];side=null;
+ createBg.style.display="flex";
+ selectItems.innerHTML="";
+ for(let i=0;i<wallet.Blossom;i++){
+   const d=document.createElement("div");
+   d.className="item";
+   d.innerHTML=`<img src="${BLOSSOM.img}" width="30"> Blossom`;
+   d.onclick=()=>{d.classList.toggle("selected");};
+   selectItems.appendChild(d);
+ }
+}
+function closeCreate(){createBg.style.display="none";}
+
+function confirmMatch(){
+ const count=document.querySelectorAll(".item.selected").length;
+ if(count==0||!side)return alert("Item & side seç");
+ const id=Date.now();
+ pubnub.publish({
+  channel:"matches",
+  message:{type:"create",id,creator:user,count,side}
+ });
+ createBg.style.display="none";
+}
+
 pubnub.subscribe({channels:["chat","matches"]});
 pubnub.addListener({
  message:e=>{
-  if(e.channel==="chat"){
-   messages.innerHTML+=`<div><b>${e.message.u}:</b> ${e.message.t}</div>`;
-  }
+  if(e.channel==="chat")messages.innerHTML+=`<div><b>${e.message.u}:</b> ${e.message.t}</div>`;
   if(e.channel==="matches"){
-   if(e.message.type==="create") matches[e.message.id]=e.message;
-   if(e.message.type==="remove") delete matches[e.message.id];
-   renderMatches();
+    if(e.message.type==="create")matches[e.message.id]=e.message;
+    if(e.message.type==="remove")delete matches[e.message.id];
+    render();
   }
   if(e.channel.startsWith("match-")){
-   coinflip.innerHTML=`
-    <div class="coin">${e.message.r}</div>
-    <h2>${e.message.w} WON</h2>`;
+    coinflip.innerHTML=`<div class="coin">${e.message.r}</div>`;
   }
  }
 });
 
-/* HISTORY */
-pubnub.history({channel:"chat",count:50},(_,r)=>{
- r.messages.forEach(m=>{
-  messages.innerHTML+=`<div><b>${m.entry.u}:</b> ${m.entry.t}</div>`;
+function render(){
+ matchesDiv.innerHTML="";
+ Object.values(matches).forEach(m=>{
+   matchesDiv.innerHTML+=`
+   <div class="match">
+    ${m.creator} (${m.count} Blossom) - ${m.side}
+    <br><br>
+    <button onclick="join(${m.id})">Join</button>
+    <button onclick="watch(${m.id})">View</button>
+   </div>`;
  });
-});
-pubnub.history({channel:"matches",count:50},(_,r)=>{
- r.messages.forEach(m=>{
-  if(m.entry.type==="create") matches[m.entry.id]=m.entry;
-  if(m.entry.type==="remove") delete matches[m.entry.id];
- });
- renderMatches();
-});
+}
+function join(id){
+ pubnub.subscribe({channels:["match-"+id]});
+ const r=Math.random()<.5?"H":"T";
+ pubnub.publish({channel:"match-"+id,message:{r}});
+ pubnub.publish({channel:"matches",message:{type:"remove",id}});
+}
+function watch(id){pubnub.subscribe({channels:["match-"+id]});}
 
-/* CHAT SEND */
 chatInput.onkeypress=e=>{
  if(e.key==="Enter"){
   pubnub.publish({channel:"chat",message:{u:user,t:e.target.value}});
   e.target.value="";
  }
 };
-
-/* MATCH */
-function createMatch(){
- const id=Date.now();
- pubnub.publish({channel:"matches",message:{type:"create",id,creator:user}});
-}
-function renderMatches(){
- matchesDiv.innerHTML="";
- Object.values(matches).forEach(m=>{
-  matchesDiv.innerHTML+=`
-   <div class="match">
-    ${m.creator}
-    <br><br>
-    <button onclick="joinMatch(${m.id})">Join</button>
-   </div>`;
- });
-}
-function joinMatch(id){
- pubnub.subscribe({channels:["match-"+id]});
- const r=Math.random()<0.5?"H":"T";
- pubnub.publish({channel:"match-"+id,message:{r,w:user}});
- pubnub.publish({channel:"matches",message:{type:"remove",id}});
-}
 </script>
 </body>
 </html>
